<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration05">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@mipmap/small_left">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/nexa_bold"
                        android:textColor="#531edc"
                        android:onClick="movetoLogin"
                        android:textSize="12sp"
                        android:text="@string/login"
                        android:textAllCaps="false" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/image_holder"
                android:layout_width="185dp"
                android:layout_height="172dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/group_5"
                app:layout_constraintBottom_toTopOf="@id/titlereg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/titlereg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nexa_bold"
                android:text="@string/registration"
                android:textSize="14.7sp"
                android:textColor="#0b0320"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/descreg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_holder" />

            <TextView
                android:id="@+id/descreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="40dp"
                android:text="@string/please_enter_your_mobile_number_then_we_will_send_otp_to_verify"
                android:textAlignment="center"
                android:fontFamily="@font/nexa_book"
                android:textStyle="normal"
                android:textSize="12sp"
                android:textColor="#8c8a9a"
                app:layout_constraintBottom_toTopOf="@id/descreg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_holder" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                android:backgroundTint="@color/colorWhite"
                android:elevation="1dp"
                android:outlineAmbientShadowColor="#120d0229"
                app:cardCornerRadius="6dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toTopOf="@id/tlccon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descreg">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:elevation="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneNumber"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:hint="@string/kenya_number"
                        app:counterEnabled="true"
                        app:counterMaxLength="9">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:textColor="#0b0320"
                            android:letterSpacing="0.08"
                            android:fontFamily="@font/nexa_bold"
                            android:drawableStart="@drawable/ic_kenya_flag"
                            android:drawablePadding="5dp"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mail"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="12dp"
                        android:hint="@string/mail_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_mail_24"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/nexa_book"
                            android:textStyle="normal"
                            android:textSize="12sp"
                            android:textColor="#8c8a9a"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_continue"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginVertical="10dp"
                        android:backgroundTint="#932777"
                        android:fontFamily="@font/nexa_bold"
                        android:text="Continue"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:paddingHorizontal="12dp">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="12dp"
                            android:layout_weight="2"
                            android:background="#979797" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="OR"
                            android:fontFamily="@font/nexa_bold"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:textColor="#0b0320"
                            android:letterSpacing="0.08"
                            />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="12dp"
                            android:layout_weight="2"
                            android:background="#979797" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_business"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="12dp"
                        android:backgroundTint="#120d0229"
                        android:onClick="createAccount"
                        android:text="Create a Business Account"
                        android:textAllCaps="false"
                        android:fontFamily="@font/nexa_bold"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        android:textColor="#8484a9"

                       />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <RelativeLayout
                android:id="@+id/tlccon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardreg">

                <TextView
                    android:id="@+id/tlc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/nexa_book"
                    android:textStyle="normal"
                    android:textColor="#222b45"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/tlc"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

