<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_register"
        android:orderInCategory="300"
        android:title="Register"
        app:showAsAction="always"
        android:onClick="movetoreg"
        />
</menu>