...
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:text="@string/app_intro" />

        <Button
            android:id="@+id/btn_getstarted"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/intotext"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
...
