<resources>
    <string name="app_name">Wolenje Africa</string>
    <string name="Link_Accoount">Link Accoount</string>
    <string name="app_intro">Wolenje, Lipa kwa urahisi</string>
    <string name="button_intro">Get Started</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="please_lift_and_rest_your_finger">please lift and rest your finger</string>
    <string name="Continue">Continue</string>
    <string name="Save_and_Continue">Save ben &amp;amp Continue; angie</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="bank_account">Bank Account</string>
...
